0.33 
 - New API: MarketplaceEntitlement
 - API update: AppStream
 - API update: CloudFormation
 - API update: CloudWatchEvents
 - API update: CodeDeploy
 - API update: DeviceFarm
 - API update: ECS
 - API update: ELB
 - API update: ELBv2
 - API update: GameLift
 - API update: Inspector
 - API update: Lambda
 - API update: LexModels
 - API update: Organizations
 - API update: RDS
 - API update: Snowball
 - API update: SQS
 - API update: SSM

0.32 20 Apr 2017
 - Speed up Credential Refreshing (Arthur Axel fREW Schmidt)
 - Bug fixed: Issue #105. Some API calls where not correctly handling parameters specified in their URI.
   Notably, this fixes S3 ListObjectsV2. (dakkar)
 - Bug fixed: RestJSON services support parameters and results in body (streaming responses)
 - S3 now supports Metadata correctly (PopeFelix)
 - New API: LexRuntime
 - New API: Organizations
 - New API: MTurk (Mechanical Turk)
 - New API: WorkDocs
 - New API: ResourceTagging
 - New API: CodeStar
 - New API: LexModels
 - CodeCommit API update
 - ELBv2 API update
 - ECS API update 
 - EC2 API update
 - StorageGateway API update
 - DirectConnect API update
 - CognitoIdentity API update
 - Config API update
 - KMS API update
 - GameLift API update
 - ElasticBeanstalk API update
 - ES API update
 - DynamoDB API update
 - IAM API update
 - RDS API update
 - CloudDirectory API update
 - DeviceFarm API update 
 - EMR API update
 - ApiGateway API update
 - Pinpoint API update
 - Discovery API update
 - CloudTrail API update
 - Batch API update
 - CloudFront API update
 - CloudDirectory API update
 - CloudWatch API update
 - ElastiCache API update
 - ApiGateway API update
 - Lambda API update
 - Polly API update
 - Redshift API update
 - Rekognition API update

0.31 01 Feb 2017 
 - Bug fixed: Services that use QueryCaller and EC2Caller were not serializing Booleans correctly
 - New API: CUR (AWS Cost and Usage Report Service) 
 - New API: CloudDirectory 
 - CodeDeploy API update: BlueGreen deployments