@@ -1,4 +1,5 @@
 0.33 
+ - New Credential provider: Paws::Credential::Explicit for providing in-code credentials (meis)
  - New API: MarketplaceEntitlement
  - API update: AppStream
  - API update: CloudFormation
